--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
 		"axios": "^0.27.2",
+		"glob-parent": "^6.0.2",
+		"got": "^12.5.1",
 		"node-sass": "^7.0.3",
+		"nth-check": "^2.1.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.35.0",
